--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   ],
   "dependencies": {
     "firebase": "^3.4.1",
-    "cryptojs": "*"
+    "cryptojs": "*",
+    "crypto-js": "^3.1.6"
   }
 }
